# speed-chess

./: .dockerignore  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
contracts/: Cargo.toml
contracts/abi/: Cargo.toml
contracts/abi/src/: bet_chip_profile.rs  blackjack.rs  chess.rs  deck.rs  leaderboard.rs  lib.rs  management.rs  player_dealer.rs  poker.rs  random.rs
contracts/betting/: Cargo.toml  README.md  linera.toml
contracts/betting/src/: contract.rs  lib.rs  service.rs  state.rs  tests.rs
contracts/game/: Cargo.toml  linera.toml
contracts/game/src/: chess_logic.rs  contract.rs  contract.rs.backup  contract.rs.bak2  contract_minimal.rs  lib.rs  service.rs  state.rs  tests.rs
contracts/token/: Cargo.toml  linera.toml
contracts/token/src/: Cargo.toml  lib.rs  state.rs
contracts/token/src/src/: contract.rs  service.rs
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-multiplayer.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: BettingPanel.tsx  ChessBoard.tsx  GameList.tsx  GamesList.tsx  Header.tsx
frontend/src/components/Betting/: BetPanel.tsx
frontend/src/components/Chessboard/: Board.tsx
frontend/src/hooks/: useGames.ts  useWallet.ts
frontend/src/lib/: graphql.ts
frontend/src/store/: gameStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
oracle/: README.md  package-lock.json  package.json
oracle/src/: config.ts  index.ts
oracle/src/core/operations/: analyzePosition.ts  updateOdds.ts
oracle/src/core/types/: index.ts
oracle/src/scheduler/: gameScheduler.ts
oracle/src/workers/: gameMonitor.ts  stockfishEngine.ts
