[workspace]
members = [
    "contracts/abi",
    "contracts/game",
    "contracts/token",
    "contracts/betting",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
linera-sdk = "0.15.6"
linera-views = "0.15.6"
async-graphql = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
