[workspace]
resolver = "2"
members = [
    "abi",
    "game",
    "betting",
    "token",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
abi = { path = "./abi" }
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }
linera-sdk = { version = "0.15.7" }
linera-views = { version = "0.15.7" }
futures = { version = "0.3" }
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }
log = { version = "0.4.27" }
rand = { version = "0.8.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["rt", "sync"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
