[package]
name = "abi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
async-graphql = { workspace = true }
async-graphql-derive = { workspace = true }
linera-sdk = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
