[package]
name = "bankroll"
version = "0.2.0"
edition = "2021"

[dependencies]
abi = { path = "../abi" }
async-graphql = "7.0.17"
log = "0.4"
linera-sdk = "0.15.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.40", features = ["rt", "sync"] }
linera-sdk = { version = "0.15.7", features = ["test", "wasmer"] }

[dev-dependencies]
linera-sdk = { version = "0.15.7", features = ["test"] }

[[bin]]
name = "bankroll_contract"
path = "src/contract.rs"

[[bin]]
name = "bankroll_service"
path = "src/service.rs"
